corrected a bug in the recipe

--- a/src/main/resources/data/tutorialmod/recipes/sapphire_from_sapphire_block.json
+++ b/src/main/resources/data/tutorialmod/recipes/sapphire_from_sapphire_block.json
@@ -6,6 +6,8 @@
             "item": "tutorialmod:sapphire_block"
         }
     ],
-    "result": "tutorialmod:sapphire",
-    "count": 9
+    "result": {
+        "item": "tutorialmod:sapphire",
+        "count": 9
+    }
 }
